Add info to FAQ (Visa section)

--- a/source/faq.html
+++ b/source/faq.html
@@ -1,10 +1,7 @@
----
-layout: default
-title: IODC18
-lang: en
----
+--- layout: default title: IODC18 lang: en ---
 
-<main role="main" class="wrapper"> <!-- main content starts here -->
+<main role="main" class="wrapper">
+  <!-- main content starts here -->
 
   <div class="callout callout--small">
     <h1>FAQ</h1>
@@ -15,86 +12,183 @@ lang: en
     <h2 style="text-align:center;">Registration</h2>
     <ul>
       <li>
-        <strong>If I submit a proposal for the agenda, do I need to register?</strong> <br>
+        <strong>If I submit a proposal for the agenda, do I need to register?</strong>
+        <br>
         <span>Yes. All participants, speakers and attendees, must register to get an access badge.</span>
       </li>
       <li>
-        <strong>Is there a fee for registration?</strong> <br>
+        <strong>Is there a fee for registration?</strong>
+        <br>
         <span>No, access to the event is free.</span>
       </li>
       <li>
-        <strong>What is the deadline for registration?</strong> <br>
-        <span>Registration will remain open throughout the event. Registration will take place at the entrance hall of the Usina del Arte,  (Agustín R. Caffarena 1).</span>
+        <strong>What is the deadline for registration?</strong>
+        <br>
+        <span>Registration will remain open throughout the event. Registration will take place at the entrance hall of the Usina
+          del Arte, (Agustín R. Caffarena 1).</span>
       </li>
       <li>
-        <strong>May I register at the event?</strong> <br>
-        <span>Yes, you may register at the event on September 27-28, 2018. However, we do recommend registering in advance to facilitate the process.</span>
+        <strong>May I register at the event?</strong>
+        <br>
+        <span>Yes, you may register at the event on September 27-28, 2018. However, we do recommend registering in advance to facilitate
+          the process.</span>
       </li>
       <li>
-        <strong>Will I be notified once I register?</strong> <br>
-        <span>When you complete the registration form, the website will notify you whether you have successfully registered. You will also receive an automatic confirmation email.</span>
+        <strong>Will I be notified once I register?</strong>
+        <br>
+        <span>When you complete the registration form, the website will notify you whether you have successfully registered. You
+          will also receive an automatic confirmation email.</span>
       </li>
     </ul>
-    <h2 style="text-align:center;">Visas</h2>
-    <ul>
-      <li>
-        <strong>Do I need a visa to travel to Argentina?</strong> <br>
-        <span>Please visit <a href="argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a> to find information about traveling to Argentina.</span>
-      </li>
-    </ul>
+
     <h2 style="text-align:center;">Agenda and Sessions</h2>
     <ul>
       <li>
-        <strong>Where will the event take place?</strong> <br>
-        <span>IODC 2018 will take place on September 27-28, 2018  at the Usina del Arte, Agustín R. Caffarena 1.</span>
+        <strong>Where will the event take place?</strong>
+        <br>
+        <span>IODC 2018 will take place on September 27-28, 2018 at the Usina del Arte, Agustín R. Caffarena 1.</span>
       </li>
       <li>
-        <strong>When will the draft programme be available?</strong> <br>
+        <strong>When will the draft programme be available?</strong>
+        <br>
         <span>The draft programme will be available in early June.</span>
       </li>
       <li>
-        <strong>Where will the agenda be made available?</strong> <br>
-        <span>The programme will be available at: <a href="https://www.opendatacon.org">https://www.opendatacon.org</a>.</span>
+        <strong>Where will the agenda be made available?</strong>
+        <br>
+        <span>The programme will be available at:
+          <a href="https://www.opendatacon.org">https://www.opendatacon.org</a>.</span>
       </li>
       <li>
-        <strong>When will I know if my proposal is accepted?</strong> <br>
-        <span>In early June. Along with the draft programme, we will notify the speakers and facilitators whose proposals were accepted.</span>
+        <strong>When will I know if my proposal is accepted?</strong>
+        <br>
+        <span>In early June. Along with the draft programme, we will notify the speakers and facilitators whose proposals were
+          accepted.
+        </span>
       </li>
       <li>
-        <strong>If my proposal is not accepted, will I be notified?</strong> <br>
+        <strong>If my proposal is not accepted, will I be notified?</strong>
+        <br>
         <span>Yes, we will notify participants whose proposals were not accepted in early June.</span>
       </li>
       <li>
-        <strong>What is the hashtag for the event?</strong> <br>
+        <strong>What is the hashtag for the event?</strong>
+        <br>
         <span>#IODC2018</span>
       </li>
       <li>
-        <strong>Will sessions be livestreamed?</strong> <br>
+        <strong>Will sessions be livestreamed?</strong>
+        <br>
         <span>All sessions that take place in the main room will be livestreamed</span>
       </li>
       <li>
-        <strong>Will simultaneous translation be available?</strong> <br>
+        <strong>Will simultaneous translation be available?</strong>
+        <br>
         <span>Yes. There will be simultaneous translation services (English-Spanish-English) in the main room and secondary rooms.</span>
       </li>
       <li>
-        <strong>Is travel assistance available for participants or presenters?</strong> <br>
-        <span>A limited number of participants may be eligible for assistance. More information will be made available in the coming months.</span>
+        <strong>Is travel assistance available for participants or presenters?</strong>
+        <br>
+        <span>A limited number of participants may be eligible for assistance. More information will be made available in the coming
+          months.
+        </span>
       </li>
       <li>
-        <strong>Is the venue accessible to people with disabilities?</strong> <br>
-        <span>Yes, there are accessible pathways to the first and second floors. There are also ramps to enter the different halls and special sittings are reserved for people with disabilities.</span>
+        <strong>Is the venue accessible to people with disabilities?</strong>
+        <br>
+        <span>Yes, there are accessible pathways to the first and second floors. There are also ramps to enter the different halls
+          and special sittings are reserved for people with disabilities.</span>
       </li>
       <li>
-        <strong>I am a journalist and want to cover IODC. How can I do this?</strong> <br>
-        <span>Contact us at <a href="mailto:contact@opendatacon.org">contact@opendatacon.org</a> to discuss media access to the event.</span>
+        <strong>I am a journalist and want to cover IODC. How can I do this?</strong>
+        <br>
+        <span>Contact us at
+          <a href="mailto:contact@opendatacon.org">contact@opendatacon.org</a> to discuss media access to the event.</span>
       </li>
+    </ul>
+
+    <h2 style="text-align:center;">Visas</h2>
+    <!-- <ul>
+      <li>
+        <strong>Do I need a visa to travel to Argentina?</strong>
+        <br>
+        <span>Please visit
+          <a href="argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a> to find information about traveling to Argentina.</span>
+      </li>
+    </ul> -->
+
+    <ul>
+      <li>
+        <span>If you wish to participate in the Conference, please consult with due anticipation if you precise a visa to enter
+          the Argentine Republic. For information on nationalities that require a visa to enter Argentina, diplomatic or
+          official passports, please consult the following link:
+          <a href="http://www.migraciones.gov.ar/accesible/indexA.php?visas">http://www.migraciones.gov.ar/accesible/indexA.php?visas</a>
+        </span>
+      </li>
+      <li>
+        <span>2. Foreigners who do not require a visa to enter the Argentine Republic, must present their valid passport and proof
+          of accreditation to the Conference at the immigration point of entry into Argentina.
+        </span>
+      </li>
+      <li>
+        <span>3. Foreigners holding passports that require a visa to enter the Argentine Republic, should contact the Argentine
+          Consular Representation before which they wish to process their visa, 45 days prior to the date of their trip.
+          For contact information of Consulates and Embassies of the Argentine Republic, please consult the following link:
+          <a href="http://mrecic.gov.ar/representaciones">http://mrecic.gov.ar/representaciones</a>
+        </span>
+      </li>
+
+      <li>
+        <span>4. If you do not have Argentine Consular Representation in your country of residence, you will have the possibility
+          of requesting your visa remotely. For this exceptional procedure, you must follow the following steps:
+        </span>
+        <ul>
+          <li>
+            <span>
+              a. Contact the Consular Representation that is most convenient, with an anticipation of 45 days to the date of your trip:
+              <a href="http://mrecic.gov.ar/representaciones">http://mrecic.gov.ar/representaciones</a>
+
+            </span>
+          </li>
+          <li>
+            <span>
+              b. Send the requested documentation, via email, to the corresponding Consular Representation.
+            </span>
+          </li>
+          <li>
+            <span>
+              c. Request the corresponding Consular Representation appointment with date and time for the consular interview, which will
+              be carried out by virtual means (Skype, Facetime, etc.);
+            </span>
+          </li>
+          <li>
+            <span>
+              d. Once the visa has been approved, the Consular Representation will contact you to coordinate a date and time in which you
+              can appear before said Representation, with your valid passport, to obtain your visa (this may occur during
+              a stopover of your flight to the Argentine Republic). Note: you can authorize another person to appear before
+              the Consular Representation with your passport to obtain your visa
+            </span>
+          </li>
+          <li>
+            <span>
+              e. The Argentine Republic, through Consular Representation, reserves the right to deny any visa applicant the possibility
+              of carrying out the procedure remotely, requiring the foreigner to carry out the procedure in person.
+            </span>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <span>
+          5. In exceptional circumstances, you may process your visa before an Argentine Consular Representation and coordinate with
+          this Representation the withdrawal of your visa from another Consular Office.
+          <br />Details of the visa procedure, such as the documentation to be presented and the cost of the visa, will be informed
+          to the applicant by the corresponding Consular Representation.
+
+        </span>
+
+      </li>
+
     </ul>
   </div>
 
 </main>
-
-
-
-
-
-
