--- a/source/faq_es.html
+++ b/source/faq_es.html
@@ -1,10 +1,7 @@
----
-layout: default
-title: IODC18
-lang: es
----
+--- layout: default title: IODC18 lang: es ---
 
-<main role="main" class="wrapper"> <!-- main content starts here -->
+<main role="main" class="wrapper">
+  <!-- main content starts here -->
 
   <div class="callout callout--small">
     <h1>Preguntas Frecuentes</h1>
@@ -15,86 +12,199 @@ lang: es
     <h2 style="text-align:center;">Registro</h2>
     <ul>
       <li>
-        <strong>¿Debo inscribirme si envié una propuesta para la agenda?</strong> <br>
-        <span>S&Iacute;, todos los que quieran participar, ya sea como expositores o asistentes, deben registrarse. Esto es fundamental para que puedas obtener tu credencial de acceso.</span>
+        <strong>¿Debo inscribirme si envié una propuesta para la agenda?</strong>
+        <br>
+        <span>S&Iacute;, todos los que quieran participar, ya sea como expositores o asistentes, deben registrarse. Esto es fundamental
+          para que puedas obtener tu credencial de acceso.</span>
       </li>
       <li>
-        <strong>¿Debo abonar el registro?</strong> <br>
+        <strong>¿Debo abonar el registro?</strong>
+        <br>
         <span>No, la participación en el evento es completamente gratuita.</span>
       </li>
       <li>
-        <strong>¿Hasta cuándo estará abierto el registro para participar y asistir al evento?</strong> <br>
-        <span>El registro permanecerá abierto hasta el d&Iacute;a del evento inclusive. Se realizará inscripción en el hall del lugar.</span>
+        <strong>¿Hasta cuándo estará abierto el registro para participar y asistir al evento?</strong>
+        <br>
+        <span>El registro permanecerá abierto hasta el d&Iacute;a del evento inclusive. Se realizará inscripción en el hall del
+          lugar.
+        </span>
       </li>
       <li>
-        <strong>¿Puedo registrarme el mismo d&Iacute;a del evento?</strong> <br>
-        <span>S&Iacute;, podés registrarte en la sede del evento los d&Iacute;as 27 y 28 de septiembre. Sin embargo, recomendamos registrarse previamente para facilitar el ingreso.</span>
+        <strong>¿Puedo registrarme el mismo d&Iacute;a del evento?</strong>
+        <br>
+        <span>S&Iacute;, podés registrarte en la sede del evento los d&Iacute;as 27 y 28 de septiembre. Sin embargo, recomendamos
+          registrarse previamente para facilitar el ingreso.</span>
       </li>
       <li>
-        <strong>Una vez completado el registro, ¿me van a avisar si estoy correctamente inscripto al evento?</strong> <br>
-        <span>Apenas completes el formulario online de registro la pantalla indicará si estás correctamente inscripto. Luego recibirás un correo automático de confirmación a la casilla de correo que indicaste.</span>
+        <strong>Una vez completado el registro, ¿me van a avisar si estoy correctamente inscripto al evento?</strong>
+        <br>
+        <span>Apenas completes el formulario online de registro la pantalla indicará si estás correctamente inscripto. Luego recibirás
+          un correo automático de confirmación a la casilla de correo que indicaste.</span>
       </li>
     </ul>
-    <h2 style="text-align:center;">Visas</h2>
-    <ul>
-      <li>
-        <strong>¿Necesito visa para ingresar a Argentina?</strong> <br>
-        <span>Podés encontrar información sobre ingreso al pa&Iacute;s en <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
-      </li>
-    </ul>
+
     <h2 style="text-align:center;">Agenda y sesiones</h2>
     <ul>&Iacute;
       <li>
-        <strong>¿Dónde se realizará la Conferencia?</strong> <br>
-        <span>La Conferencia se realizará los días 27 y 28 de septiembre en la Usina del Arte,  Agustín R. Caffarena 1.</span>
+        <strong>¿Dónde se realizará la Conferencia?</strong>
+        <br>
+        <span>La Conferencia se realizará los días 27 y 28 de septiembre en la Usina del Arte, Agustín R. Caffarena 1.</span>
       </li>
       <li>
-        <strong>¿Cuándo se publicará la agenda provisoria de la Conferencia?</strong> <br>
+        <strong>¿Cuándo se publicará la agenda provisoria de la Conferencia?</strong>
+        <br>
         <span>Se publicará una agenda provisoria a principios de junio.</span>
       </li>
       <li>
-        <strong>¿Dónde puedo encontrar la agenda?</strong> <br>
-        <span>La agenda se publicará en <a href="https://www.opendatacon.org/">https://www.opendatacon.org/</a>.</span>
+        <strong>¿Dónde puedo encontrar la agenda?</strong>
+        <br>
+        <span>La agenda se publicará en
+          <a href="https://www.opendatacon.org/">https://www.opendatacon.org/</a>.</span>
       </li>
       <li>
-        <strong>¿Cómo sé si mi propuesta fue aprobada?</strong> <br>
-        <span>A principios de junio, y en paralelo a la publicación de la agenda provisoria, se notificará a quienes hayan realizado propuestas que estén seleccionadas para la agenda.</span>
+        <strong>¿Cómo sé si mi propuesta fue aprobada?</strong>
+        <br>
+        <span>A principios de junio, y en paralelo a la publicación de la agenda provisoria, se notificará a quienes hayan realizado
+          propuestas que estén seleccionadas para la agenda.</span>
       </li>
       <li>
-        <strong>¿Me avisaran si mi propuesta no resultó seleccionada para la agenda de la Conferencia?</strong> <br>
-        <span>Sí, quienes hayan enviado propuestas que finalmente no sean parte de la agenda recibirán un mail de notificación a principios de junio.</span>
+        <strong>¿Me avisaran si mi propuesta no resultó seleccionada para la agenda de la Conferencia?</strong>
+        <br>
+        <span>Sí, quienes hayan enviado propuestas que finalmente no sean parte de la agenda recibirán un mail de notificación
+          a principios de junio.</span>
       </li>
       <li>
-        <strong>¿Cuál es el # del Encuentro?</strong> <br>
+        <strong>¿Cuál es el # del Encuentro?</strong>
+        <br>
         <span>#IODC2018</span>
       </li>
       <li>
-        <strong>¿Se realizará livestream de las sesiones?</strong> <br>
+        <strong>¿Se realizará livestream de las sesiones?</strong>
+        <br>
         <span>Se realizará livestream de las sesiones de la sala principal.</span>
       </li>
       <li>
-        <strong>¿Habrá traducción simultánea?</strong> <br>
+        <strong>¿Habrá traducción simultánea?</strong>
+        <br>
         <span>Sí, la Conferencia contará con traducción simultánea inglés - español, español - inglés en todas las salas.</span>
       </li>
       <li>
-        <strong>¿Hay asistencia de viaje disponible para participantes y/o presentadores? </strong> <br>
-        <span>Los cupos son limitados; es decir que sólo una cantidad determinada de participantes y/o presentadores puede aplicar. Dentro de los próximos meses habrá más información al respecto.</span>
+        <strong>¿Hay asistencia de viaje disponible para participantes y/o presentadores? </strong>
+        <br>
+        <span>Los cupos son limitados; es decir que sólo una cantidad determinada de participantes y/o presentadores puede aplicar.
+          Dentro de los próximos meses habrá más información al respecto.</span>
       </li>
       <li>
-        <strong>El lugar, ¿tiene acceso para personas con discapacidades?</strong> <br>
-        <span>Sí. Hay ascensores para trasladarse hasta el primer o segundo piso, además de rampas para entrar a las salas que, a su vez, cuentan con espacios reservados para mayor comodidad.</span>
+        <strong>El lugar, ¿tiene acceso para personas con discapacidades?</strong>
+        <br>
+        <span>Sí. Hay ascensores para trasladarse hasta el primer o segundo piso, además de rampas para entrar a las salas que,
+          a su vez, cuentan con espacios reservados para mayor comodidad.</span>
       </li>
       <li>
-        <strong>Soy periodista y quiero cubrir IODC. ¿Cómo puedo hacer?</strong> <br>
-        <span>Respuesta: Para acreditaciones de prensa, contactanos a <a href="mailto:contact@opendatacon.org">contact@opendatacon.org</a>.</span>
+        <strong>Soy periodista y quiero cubrir IODC. ¿Cómo puedo hacer?</strong>
+        <br>
+        <span>Respuesta: Para acreditaciones de prensa, contactanos a
+          <a href="mailto:contact@opendatacon.org">contact@opendatacon.org</a>.</span>
       </li>
     </ul>
+    <!-- 
+      1. Si usted participará de la Conferencia, por favor consulte con la debida anticipación si requiere visa para ingresar a la República Argentina. Para información sobre nacionalidades que requieren visa para ingresar a la Argentina en pasaportes ordinarios, diplomáticos u oficiales, por favor consulte el siguiente enlace: http://www.migraciones.gov.ar/accesible/indexA.php?visas 
+
+      2. Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte válido y la constancia de acreditación a la Conferencia en el punto migratorio de ingreso a la Argentina. 
+
+      3. Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina, deberán tomar contacto con la Representación Consular argentina ante la cual desean tramitar su visa, con 45 días de anticipación a la fecha de su viaje. Para datos de contacto de Consulados y Embajadas de la República Argentina, por favor consulte el siguiente enlace: http://mrecic.gov.ar/representaciones 
+
+      4. De no contar con Representación Consular argentina en su país de residencia, usted tendrá la posibilidad de solicitar su visa a distancia. Para este procedimiento excepcional, usted deberá seguir los siguientes pasos: 
+      a. Contactar a la Representación Consular que le resulte más conveniente, con una anticipación de 45 días a la fecha de su viaje: http://mrecic.gov.ar/representaciones 
+      b. Enviar la documentación solicitada, vía correo electrónico, a la Representación Consular correspondiente; 
+      c. Solicitar a la Representación Consular correspondiente, una fecha y horario para la realización de la entrevista consular, la cual se realizará por medios electrónicos (Skype, Facetime, etc.); 
+      d. Una vez que la visa ha sido aprobada, la Representación Consular lo contactará para coordinar una fecha y horario en la cual usted pueda presentarse ante dicha Representación, con su pasaporte vigente, para obtener su visa (esto puede ocurrir durante una escala de su vuelo hacia la República Argentina). Nota: usted puede autorizar a otra persona a presentarse ante la Representación Consular con su pasaporte para obtener su visa 
+      e. La República Argentina, a través de la Representación Consular, se reserva el derecho de denegar a cualquier solicitante de visa la posibilidad de realizar el trámite a distancia, requiriendo al extranjero la realización del trámite en persona 
+
+      5. En circunstancias excepcionales, usted podrá tramitar su visa ante una Representación Consular argentina y coordinar con dicha Representación el retiro de su visa ante otra Sede Consular.   Detalles del procedimiento de visado, tales como la documentación a presentar y el costo de la visa, serán informados al solicitante por la Representación Consular correspondiente.
+ -->
+    <h2 style="text-align:center;">Visas</h2>
+    <ul>
+      <!-- <li>
+        <strong>¿Necesito visa para ingresar a Argentina?</strong>
+        <br>
+        <span>Podés encontrar información sobre ingreso al pa&Iacute;s en
+          <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
+      </li> -->
+      <li>
+        <span>1. Si usted participará de la Conferencia, por favor consulte con la debida anticipación si requiere visa para ingresar
+          a la República Argentina. Para información sobre nacionalidades que requieren visa para ingresar a la Argentina
+          en pasaportes ordinarios, diplomáticos u oficiales, por favor consulte el siguiente enlace:
+          <a href="http://www.migraciones.gov.ar/accesible/indexA.php?visas">http://www.migraciones.gov.ar/accesible/indexA.php?visas</a>
+        </span>
+      </li>
+      <li>
+        <span>2. Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte
+          válido y la constancia de acreditación a la Conferencia en el punto migratorio de ingreso a la Argentina.
+        </span>
+      </li>
+      <li>
+        <span>3. Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina,
+          deberán tomar contacto con la Representación Consular argentina ante la cual desean tramitar su visa, con 45 días
+          de anticipación a la fecha de su viaje. Para datos de contacto de Consulados y Embajadas de la República Argentina,
+          por favor consulte el siguiente enlace:
+          <a href="http://mrecic.gov.ar/representaciones">http://mrecic.gov.ar/representaciones</a>
+        </span>
+      </li>
+
+      <li>
+        <span>4. De no contar con Representación Consular argentina en su país de residencia, usted tendrá la posibilidad de solicitar
+          su visa a distancia. Para este procedimiento excepcional, usted deberá seguir los siguientes pasos:
+        </span>
+        <ul>
+          <li>
+            <span>
+              a. Contactar a la Representación Consular que le resulte más conveniente, con una anticipación de 45 días a la fecha de su
+              viaje:
+              <a href="http://mrecic.gov.ar/representaciones">http://mrecic.gov.ar/representaciones</a>
+
+            </span>
+          </li>
+          <li>
+            <span>
+              b. Enviar la documentación solicitada, vía correo electrónico, a la Representación Consultar correspondiente;
+            </span>
+          </li>
+          <li>
+            <span>
+              c. Solicitar a la Representación Consular correspondiente, una fecha y horario para la realización de la entrevista consular,
+              la cual se realizará por medios electrónicos (Skype, Facetime, etc.);
+            </span>
+          </li>
+          <li>
+            <span>
+              d. Una vez que la visa ha sido aprobada, la Representación Consular lo contactará para coordinar una fecha y horario en la
+              cual usted pueda presentarse ante dicha Representación, con su pasaporte vigente, para obtener su visa (esto
+              puede ocurrir durante una escala de su vuelo hacia la República Argentina). Nota: usted puede autorizar a otra
+              persona a presentarse ante la Representación Consular con su pasaporte para obtener su visa
+            </span>
+          </li>
+          <li>
+            <span>
+              e. La República Argentina, a través de la Representación Consular, se reserva el derecho de denegar a cualquier solicitante
+              de visa la posibilidad de realizar el trámite a distancia, requiriendo al extranjero la realización del trámite
+              en persona
+            </span>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <span>
+          5. En circunstancias excepcionales, usted podrá tramitar su visa ante una Representación Consular argentina y coordinar con
+          dicha Representación el retiro de su visa ante otra Sede Consular.
+          <br />Detalles del procedimiento de visado, tales como la documentación a presentar y el costo de la visa, serán informados
+          al solicitante por la Representación Consular correspondiente.
+        </span>
+
+      </li>
+
+    </ul>
+
   </div>
 
 </main>
-
-
-
-
-
-
