--- a/source/faq.html
+++ b/source/faq.html
@@ -119,7 +119,7 @@
 
     <ul>
       <li>
-        <span>If you wish to participate in the Conference, please consult with due anticipation if you precise a visa to enter
+        <span>1. If you wish to participate in the Conference, please consult with due anticipation if you precise a visa to enter
           the Argentine Republic. For information on nationalities that require a visa to enter Argentina, diplomatic or
           official passports, please consult the following link:
           <a href="http://www.migraciones.gov.ar/accesible/indexA.php?visas">http://www.migraciones.gov.ar/accesible/indexA.php?visas</a>
