Auto stash before merge of "master" and "origin/master"

--- a/source/faq.html
+++ b/source/faq.html
@@ -1,4 +1,8 @@
---- layout: default title: IODC18 lang: en ---
+---
+ layout: default
+ title: IODC18
+ lang: en
+---
 
 <main role="main" class="wrapper">
   <!-- main content starts here -->
@@ -38,6 +42,15 @@
         <br>
         <span>When you complete the registration form, the website will notify you whether you have successfully registered. You
           will also receive an automatic confirmation email.</span>
+      </li>
+    </ul>
+    <h2 style="text-align:center;">Visas</h2>
+    <ul>
+      <li>
+        <strong>Do I need a visa to travel to Argentina?</strong>
+        <br>
+        <span>Please visit
+          <a href="argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a> to find information about traveling to Argentina.</span>
       </li>
     </ul>
 
