--- a/source/faq_es.html
+++ b/source/faq_es.html
@@ -1,4 +1,8 @@
---- layout: default title: IODC18 lang: es ---
+---
+  layout: default
+  title: IODC18
+  lang: es
+---
 
 <main role="main" class="wrapper">
   <!-- main content starts here -->
@@ -26,8 +30,7 @@
         <strong>¿Hasta cuándo estará abierto el registro para participar y asistir al evento?</strong>
         <br>
         <span>El registro permanecerá abierto hasta el d&Iacute;a del evento inclusive. Se realizará inscripción en el hall del
-          lugar.
-        </span>
+          lugar.</span>
       </li>
       <li>
         <strong>¿Puedo registrarme el mismo d&Iacute;a del evento?</strong>
@@ -40,6 +43,15 @@
         <br>
         <span>Apenas completes el formulario online de registro la pantalla indicará si estás correctamente inscripto. Luego recibirás
           un correo automático de confirmación a la casilla de correo que indicaste.</span>
+      </li>
+    </ul>
+    <h2 style="text-align:center;">Visas</h2>
+    <ul>
+      <li>
+        <strong>¿Necesito visa para ingresar a Argentina?</strong>
+        <br>
+        <span>Podés encontrar información sobre ingreso al pa&Iacute;s en
+          <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
       </li>
     </ul>
 
@@ -107,19 +119,19 @@
           <a href="mailto:contact@opendatacon.org">contact@opendatacon.org</a>.</span>
       </li>
     </ul>
-    <!-- 
-      1. Si usted participará de la Conferencia, por favor consulte con la debida anticipación si requiere visa para ingresar a la República Argentina. Para información sobre nacionalidades que requieren visa para ingresar a la Argentina en pasaportes ordinarios, diplomáticos u oficiales, por favor consulte el siguiente enlace: http://www.migraciones.gov.ar/accesible/indexA.php?visas 
+    <!--
+      1. Si usted participará de la Conferencia, por favor consulte con la debida anticipación si requiere visa para ingresar a la República Argentina. Para información sobre nacionalidades que requieren visa para ingresar a la Argentina en pasaportes ordinarios, diplomáticos u oficiales, por favor consulte el siguiente enlace: http://www.migraciones.gov.ar/accesible/indexA.php?visas
 
-      2. Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte válido y la constancia de acreditación a la Conferencia en el punto migratorio de ingreso a la Argentina. 
+      2. Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte válido y la constancia de acreditación a la Conferencia en el punto migratorio de ingreso a la Argentina.
 
-      3. Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina, deberán tomar contacto con la Representación Consular argentina ante la cual desean tramitar su visa, con 45 días de anticipación a la fecha de su viaje. Para datos de contacto de Consulados y Embajadas de la República Argentina, por favor consulte el siguiente enlace: http://mrecic.gov.ar/representaciones 
+      3. Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina, deberán tomar contacto con la Representación Consular argentina ante la cual desean tramitar su visa, con 45 días de anticipación a la fecha de su viaje. Para datos de contacto de Consulados y Embajadas de la República Argentina, por favor consulte el siguiente enlace: http://mrecic.gov.ar/representaciones
 
-      4. De no contar con Representación Consular argentina en su país de residencia, usted tendrá la posibilidad de solicitar su visa a distancia. Para este procedimiento excepcional, usted deberá seguir los siguientes pasos: 
-      a. Contactar a la Representación Consular que le resulte más conveniente, con una anticipación de 45 días a la fecha de su viaje: http://mrecic.gov.ar/representaciones 
-      b. Enviar la documentación solicitada, vía correo electrónico, a la Representación Consular correspondiente; 
-      c. Solicitar a la Representación Consular correspondiente, una fecha y horario para la realización de la entrevista consular, la cual se realizará por medios electrónicos (Skype, Facetime, etc.); 
-      d. Una vez que la visa ha sido aprobada, la Representación Consular lo contactará para coordinar una fecha y horario en la cual usted pueda presentarse ante dicha Representación, con su pasaporte vigente, para obtener su visa (esto puede ocurrir durante una escala de su vuelo hacia la República Argentina). Nota: usted puede autorizar a otra persona a presentarse ante la Representación Consular con su pasaporte para obtener su visa 
-      e. La República Argentina, a través de la Representación Consular, se reserva el derecho de denegar a cualquier solicitante de visa la posibilidad de realizar el trámite a distancia, requiriendo al extranjero la realización del trámite en persona 
+      4. De no contar con Representación Consular argentina en su país de residencia, usted tendrá la posibilidad de solicitar su visa a distancia. Para este procedimiento excepcional, usted deberá seguir los siguientes pasos:
+      a. Contactar a la Representación Consular que le resulte más conveniente, con una anticipación de 45 días a la fecha de su viaje: http://mrecic.gov.ar/representaciones
+      b. Enviar la documentación solicitada, vía correo electrónico, a la Representación Consular correspondiente;
+      c. Solicitar a la Representación Consular correspondiente, una fecha y horario para la realización de la entrevista consular, la cual se realizará por medios electrónicos (Skype, Facetime, etc.);
+      d. Una vez que la visa ha sido aprobada, la Representación Consular lo contactará para coordinar una fecha y horario en la cual usted pueda presentarse ante dicha Representación, con su pasaporte vigente, para obtener su visa (esto puede ocurrir durante una escala de su vuelo hacia la República Argentina). Nota: usted puede autorizar a otra persona a presentarse ante la Representación Consular con su pasaporte para obtener su visa
+      e. La República Argentina, a través de la Representación Consular, se reserva el derecho de denegar a cualquier solicitante de visa la posibilidad de realizar el trámite a distancia, requiriendo al extranjero la realización del trámite en persona
 
       5. En circunstancias excepcionales, usted podrá tramitar su visa ante una Representación Consular argentina y coordinar con dicha Representación el retiro de su visa ante otra Sede Consular.   Detalles del procedimiento de visado, tales como la documentación a presentar y el costo de la visa, serán informados al solicitante por la Representación Consular correspondiente.
  -->
